...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealTypesActivity">

  <TextView
      android:id="@+id/welcome_text"
      style="@style/TitleStyle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/screen_margin_horizontal_triple"
      android:layout_marginTop="@dimen/screen_margin_vertical_triple"
      android:layout_marginEnd="@dimen/screen_margin_horizontal_triple"
...
